# lethe

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/manifold_snapping_3d/: CMakeLists.txt  manifold_snapping_3d.cc
applications_tests/dem_3d/: packing_in_box.output
applications_tests/gd_navier_stokes_3d/: mms3d_gd.mpirun=2.output  poiseuille3d_gd.output  poiseuille3d_gd.prm
applications_tests/gls_navier_stokes_2d/: taylor-green-vortex_gls_bdf1.prm
applications_tests/gls_sharp_navier_stokes_2d/: couette2d_gls.output
applications_tests/gls_sharp_navier_stokes_3d/: steady_couette_sphere.output
include/core/: bdf.h  boundary_conditions.h  function_parser.h  ib_particle.h  newton_non_linear_solver.h  parameter_translator.h  parameters.h  parameters_json.h  simulation_control.h  solid_base.h
include/dem/: pp_contact_force.h  pw_contact_force.h
include/solvers/: analytical_solutions.h  boundary_conditions.h  boundary_conditions_json.h  free_surface.h  gd_navier_stokes.h  gls_navier_stokes.h  gls_sharp_navier_stokes.h  heat_transfer.h  manifold_snapping.h  multiphysics_interface.h  navier_stokes_solver_parameters.h  simulation_parameters.h  tracer.h
prototypes/: CMakeLists.txt
prototypes/IBSteadyNS/: CMakeLists.txt  IBSteadyNS.cc  boundaryconditions.h  directSteadyNS.cc  exactsolutions.h  trg_tools_class.h
prototypes/directSteadyNS/: CMakeLists.txt  directSteadyNS_copy.cc
prototypes/nitsche-ib/: CMakeLists.txt  nitsche-ib.cc  nitsche-ib_antoine.cc
source/: CMakeLists.txt
source/core/: bdf.cc  parameters.cc  parameters_json.cc  parameters_multiphysics.cc  simulation_control.cc  utilities.cc
source/dem/: find_boundary_cells_information.cc  pp_contact_force.cc  pw_contact_force.cc  pw_linear_force.cc  pw_nonlinear_force.cc  velocity_verlet_integrator.cc
source/solvers/: analytical_solutions.cc  boundary_conditions_json.cc  free_surface.cc  gd_navier_stokes.cc  gls_navier_stokes.cc  gls_sharp_navier_stokes.cc  heat_transfer.cc  manifold_snapping.cc  multiphysics_interface.cc  navier_stokes_base.cc  tracer.cc
src/: GLS_residual.h  T_analytical.h  T_integration_class.h  area.h  assemblage.h  boundary5.h  calcbk.h  calcinteg.h  condensate.h  derinterpquad.h  enum_solid_fluid.h  forcingfunctions.h  glsNS.h  ib_node_status.h  ibcombiner.h  ibcomposer.h  ibcomposer1.h  iblevelsetfunctions.cc  iblevelsetfunctions.h  integeqchaleur.h  integlocal.h  integlocal1.h  interpolationquad.h  interpolationtrg.h  jacobian.h  new_tri.h  nouvtriangles.h  quad_elem.h  quadboundary.h  t_calc_interp.h  trg_tools.h  trg_tools_class.h  trgboundary.h
tests/: CMakeLists.txt
tests/core/: json_01.cc  json_01.output
tests/ib/: CMakeLists.txt  GLS_residual_test.cc  condensate.cc  ib_01.cc  ib_02.cc  ib_03.cc  ib_04.cc  ib_05.cc  ib_06.cc  ib_07.cc  ib_08.cc  ib_09.cc  ib_B_01.cc  ib_B_02.cc  ib_B_03.cc  ib_B_04.cc  trg_tools.cc  write_data.h
tests/restart/: restart_01.cc
tests/sandbox/: CMakeLists.txt  single_element.cc
tests/solvers/: restart_01.cc
